--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "uuid": "^13.0.0",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/react": "^19.2.2",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.2.2",
+    "@types/uuid": "^10.0.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
@@ -29,7 +31,8 @@
       ">0.2%",
       "not dead",
       "not op_mini all"
-    ], "development": [
+    ],
+    "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
