--- a/package.json
+++ b/package.json
@@ -39,4 +39,8 @@
     ]
   }
 }
+"scripts": {
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+}
 "homepage": "https://pragya-hash.github.io/Book-Management-Dashboard"
