--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.2.2",
     "@types/uuid": "^10.0.0",
+    "gh-pages": "^6.3.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
