--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "book-management-dashboard",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://pragya-hash.github.io/book-dashboard",
   "dependencies": {
     "@ant-design/icons": "^5.1.0",
     "antd": "^5.8.0",
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -40,8 +43,3 @@
     ]
   }
 }
-"scripts": {
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
-}
-"homepage": "https://pragya-hash.github.io/Book-Management-Dashboard"
