feat: add dark theme support for search box placeholder color in Books and Users pages
- Updated books.css to apply dark background and light placeholder color in dark mode
- Updated users.css to apply dark background and light placeholder color in dark mode

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "book-management-dashboard",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://pragya-hash.github.io/Book-Management-Dashboard-pragya-123",
   "dependencies": {
     "@ant-design/icons": "^5.1.0",
     "antd": "^5.8.0",
@@ -18,13 +19,16 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.2.2",
     "@types/uuid": "^10.0.0",
+    "gh-pages": "^6.3.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
