--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.2.2",
     "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.22",
     "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^4.9.5"
   },
   "scripts": {
