--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "homepage": "https://pragya-hash.github.io/Book-Management-Dashboard-pragya-123",
   "dependencies": {
     "@ant-design/icons": "^5.1.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "antd": "^5.8.0",
+    "craco": "^0.0.3",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "tailwindcss": "^4.1.17",
     "uuid": "^13.0.0",
     "zustand": "^4.3.9"
   },
@@ -22,7 +25,6 @@
     "autoprefixer": "^10.4.22",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
     "typescript": "^4.9.5"
   },
   "scripts": {
